--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "parnika31/parnika31.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Parnika"
   pronouns         : "she/her"  
   bio              : "MSc Student in Computer Science at University of Montreal/Mila"
   location         : "Montreal,Quebec,Canada"
