--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  experience:
+    output: true
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -223,6 +226,15 @@ defaults:
   - scope:
       path: ""
       type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+   # _experience
+  - scope:
+      path: ""
+      type: experience
     values:
       layout: single
       author_profile: true
