--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /experiences/    
     
   - title: "Projects"
-    url: /portfolio/
+    url: /projects/
         
   - title: "CV"
     url: /cv/
