--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,5 +15,5 @@ main:
     url: /portfolio/
         
   - title: "CV"
-    url: https://github.com/parnika31/parnika31.github.io/files/resume.pdf
+    url: https://parnika31.github.io/files/resume.pdf
     
